# tspec

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE
include/: audio.h  display.h  spectrum.h
src/: audio.c  display.c  main.c  spectrum.c
